Atualizaçao do CSS

--- a/estilo.css
+++ b/estilo.css
@@ -85,13 +85,16 @@ ul, li{
         border: 1px solid green;
     }
         .texto-comunidade-p30{
-            width: 550px;
+            width: 600px;
             text-align: justify;
             box-sizing: border-box;
             padding: 0 12px;
            
 
             border: 1px solid blue;
+        }
+        .texto-comunidade-p30 p{
+            margin: 0;
         }
         .login-p30{
             width: 300px;
